--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,28 +7,31 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TDM"
         tools:targetApi="31">
         <activity
             android:name=".login.RecuperarContraActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".login.ForgotPasswordActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".login.ForgotPasswordActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".login.LoginActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".login.RegisterActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".login.LoginActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -38,7 +41,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
