--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:theme="@style/Theme.TDM"
         tools:targetApi="31">
         <activity
+            android:name=".cliente.ClienteListaPedidosActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".admin.AgregarTIActivity"
             android:exported="false">
             <meta-data
@@ -65,7 +72,6 @@
         <activity
             android:name=".cliente.ClienteListaDispositivosActivity"
             android:exported="false">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -155,6 +161,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
