--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:theme="@style/Theme.TDM"
         tools:targetApi="31">
         <activity
+            android:name=".admin.AdminDispositivoMasPrestadoActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".admin.AdminReportesActivity"
             android:exported="false">
             <meta-data
@@ -187,9 +194,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}"/>
+            android:value="${MAPS_API_KEY}" />
     </application>
 
 </manifest>
