--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -197,7 +197,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyAaqxDfnVf4gZGYcCAIT0_kQq7Dcrj6RzI" />
     </application>
 
 </manifest>
